--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h1 class="med-text bold header-item">
         Catherine Brett <span class="pink">Junior Software Engineer</span>
       </h1>
-      <nav class="contact header-item">
+      <nav class="header-contact header-item">
         <a
           href="https://github.com/CatherineBrett"
           target="_blank"
@@ -552,6 +552,30 @@
           </div>
         </article>
       </section>
+      <footer>
+        <small>Copyright © 2024 Catherine Brett</small>
+        <nav class="footer-contact footer-item">
+          <a
+            href="https://github.com/CatherineBrett"
+            target="_blank"
+            rel="noreferrer"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/catherine-brett/"
+            target="_blank"
+            rel="noreferrer"
+          >
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a
+            href="mailto:catherinejanebrett@icloud.com"
+            target="_blank"
+            rel="noreferrer"
+            ><i class="fa-solid fa-envelope"></i
+          ></a>
+        </nav>
+      </footer>
     </main>
   </body>
 </html>
