Various styling tweaks and hid contact icons in header nav on mobile

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </g>
         </svg>
         <h2 class="xl-text">
-          Hi 👋, I'm <span class="blue">Catherine</span
+          Hi, I'm <span class="mauve">Catherine</span
           ><span class="subtitle">Welcome to my website</span>
         </h2>
         <svg
@@ -390,11 +390,13 @@
         </div>
       </section>
       <section class="projects">
-        <h2 class="large-text">Projects</h2>
-        <p>
-          I completed General Assembly's Software Engineering Bootcamp between
-          January and April 2024. As part of the course I built four projects:
-        </p>
+        <div class="centered">
+          <h2 class="large-text">Projects</h2>
+          <p>
+            I completed General Assembly's Software Engineering Bootcamp between
+            January and April 2024. As part of the course I built four projects:
+          </p>
+        </div>
         <article class="project">
           <div class="project-body">
             <div class="project-info">
