Removed redundant media query and made some copy changes

--- a/index.html
+++ b/index.html
@@ -198,23 +198,23 @@
         <h2 class="large-text">About Me</h2>
         <div class="about-copy">
           <p>
-            My name is Catherine and I am a mid-career changer who has accrued
-            diverse experience in a variety of roles, including working for the
-            picture desk of a national newspaper, in marketing for a chain of
-            restaurants, for myself as a freelance translator, and more
-            recently, in the voluntary sector as both an employee and a
+            My name is Catherine and I am a Junior Software Engineer who has
+            accrued diverse experience in a variety of other roles, including
+            working for the picture desk of a national newspaper, in marketing
+            for a chain of restaurants, for myself as a freelance translator,
+            and more recently, in the voluntary sector as both an employee and a
             volunteer.
           </p>
 
           <p>
             Since the pandemic, WFH has meant sharing a workspace with a
-            software engineer, and this has given me an invaluable insight into
-            the profession and its processes - stand-ups, sprints, retros etc.
-            As someone who is motivated by effective collaboration, high
+            software engineer, and this has given me invaluable insight into the
+            profession and its processes - stand-ups, sprints, retros etc. As
+            someone who is motivated by effective collaboration, high
             performance, and continuous learning and improvement, my interest
-            was piqued. However, having thought of myself (reductively!) as a
-            "humanities person" all my adult life, I didn't believe at the time
-            that a stem career could really be for me.
+            was piqued. However, having thought of myself rather reductively as
+            "more of a humanities person" all my adult life, I didn't believe at
+            the time that a stem career could really be for me.
           </p>
 
           <p>
@@ -236,7 +236,7 @@
             I hope to secure a full-time position working with super fun people
             who are super serious about what they do, where I will be supported
             and encouraged to understand my new craft inside out. As a
-            colleague, I think I'm adept at asking the right questions and at
+            colleague, I think I'm good at asking the right questions and at
             looking ahead to forestall problems. Being a linguist, I'm a clear,
             adaptable communicator. With a background in written translation, I
             pride myself on (and often bore other people with) my attention to
