Highlighted tech stacks in project descriptions

--- a/index.html
+++ b/index.html
@@ -404,8 +404,8 @@
                 Project 1 (Solo) <span class="pink">Frogger</span>
               </h3>
               <p>
-                Using DOM manipulation, I built a grid-based browser version of
-                80s arcade game Frogger in HTML, CSS and JavaScript across 6
+                Using <span>DOM manipulation</span>, I built a grid-based browser version of
+                80s arcade game Frogger in <span>HTML, CSS and JavaScript</span> across 6
                 business days (8 in total). My main challenges included
                 animating the obstacles and detecting collisions with my player
                 character. My stretch goals included a high score display and
@@ -441,10 +441,10 @@
                 Project 2 (Pair) <span class="pink">Quiz App</span>
               </h3>
               <p>
-                With a partner, I produced a React quiz app with TypeScript over
+                With a partner, I produced a <span>React</span> quiz app with <span>TypeScript</span> over
                 a two-day hackathon. Our app consumed the Open Trivia public
-                API, had a router with two “pages”, and was styled using the
-                Bulma CSS framework. We mostly pair-programmed, taking turns as
+                API, used <span>React Router</span>, and was styled with the
+                <span>Bulma</span> CSS framework. We mostly pair-programmed, taking turns as
                 driver/navigator.
               </p>
               <div class="link-container">
@@ -479,7 +479,7 @@
               </h3>
               <p>
                 Our group of three built a full-stack “bootcamp advice” app over
-                one week, using MongoDB, Express, React/TypeScript and Node.js.
+                one week, using <span>MongoDB</span>, <span>Express</span>, <span>React/TypeScript</span> and <span>Node.js</span>.
                 My contributions to the project included providing the concept,
                 implementing UI, writing some of the key logic for our CRUD
                 functionality and producing some of the form validation and
@@ -521,9 +521,9 @@
               <p>
                 For my final project, I worked solo to build a full-stack
                 “community groups” app over 8 business days (12 in total). I
-                used a Python Flask API with Flask REST framework to serve my
-                data from a Postgres database. I built my frontend with
-                React/TypeScript. The project has CRUD functionality, with
+                used a <span>Python</span> Flask API with <span>Flask</span> REST framework to serve my
+                data from a <span>Postgres</span> database. I built my frontend with
+                <span>React/TypeScript</span>. The project has CRUD functionality, with
                 various models and a mix of one-to-many and many-to-many
                 relationships.
               </p>
