Added subheadings and highlighted keywords in About Me

--- a/index.html
+++ b/index.html
@@ -197,54 +197,59 @@
       <section class="about">
         <h2 class="large-text">About Me</h2>
         <div class="about-copy">
+          <h4>Previously...</h4>
           <p>
-            My name is Catherine and I am a Junior Software Engineer who has
+            My name is Catherine and I am a <span>Junior Software Engineer</span> who has
             accrued diverse experience in a variety of other roles, including
             working for the picture desk of a national newspaper, in marketing
             for a chain of restaurants, for myself as a freelance translator,
             and more recently, in the voluntary sector as both an employee and a
             volunteer.
           </p>
-
+          <h4>Why Software Engineering?</h4>
           <p>
             Since the pandemic, WFH has meant sharing a workspace with a
             software engineer, and this has given me invaluable insight into the
             profession and its processes - stand-ups, sprints, retros etc. As
-            someone who is motivated by effective collaboration, high
-            performance, and continuous learning and improvement, my interest
+            someone who is <span>
+              motivated by effective collaboration, high
+              performance, and continuous learning and improvement
+            </span>, my interest
             was piqued. However, having thought of myself rather reductively as
             "more of a humanities person" all my adult life, I didn't believe at
             the time that a stem career could really be for me.
           </p>
-
+          <h4>My Journey So Far</h4>
           <p>
             A couple of years later and to meet the requirements of a job
             vacancy which asked for some experience of HTML and JavaScript, I
-            turned to Codecademy and found to my surprise that I very much
+            turned to <span>Codecademy</span> and found to my surprise that I very much
             enjoyed it. Around the same time, some personality testing via my
             university's careers service also suggested the field would be a
             very good fit for me. All signs now seemed to point to software
-            engineering, and so I took the plunge and enrolled on General
-            Assembly's immersive bootcamp. It was fantastic to be back in a
+            engineering, and so I took the plunge and enrolled on <span>
+              General
+              Assembly's immersive bootcamp
+            </span>. It was fantastic to be back in a
             learning environment and to be really challenged by something
             totally new, and I am looking forward to starting out in the field,
             knowing I will be expected to continue to learn and improve
-            throughout my career.
+            throughout my career. I hope to secure a full-time position working
+            with super fun people who are super serious about what they do,
+            where I will be supported and encouraged to understand my new craft
+            inside out.
           </p>
-
+          <h4>Why Me?</h4>
           <p>
-            I hope to secure a full-time position working with super fun people
-            who are super serious about what they do, where I will be supported
-            and encouraged to understand my new craft inside out. As a
-            colleague, I think I'm good at asking the right questions and at
-            looking ahead to forestall problems. Being a linguist, I'm a clear,
-            adaptable communicator. With a background in written translation, I
-            pride myself on (and often bore other people with) my attention to
-            detail.
+            As a colleague, I think I'm good at asking the right questions and
+            at looking ahead to forestall problems. Being a linguist, I'm a
+            <span>clear, adaptable communicator</span>. With a background in written
+            translation, I pride myself on (and often bore other people with) my
+            <span>attention to detail</span>.
           </p>
-
+          <h4>My Programming Interests</h4>
           <p class="resources">
-            I am particularly interested in backend development, and I subscribe
+            I am particularly interested in <span>backend development</span>, and I subscribe
             to the
             <cite>Talk Python to Me</cite> podcast. Having heard Eric Matthes on
             the show, I have also begun his
@@ -261,9 +266,9 @@
             embracing the opportunity to practise what I've learned so far and
             to broaden/deepen my understanding of the discipline.
           </p>
-
+          <h4>(Some) Other Interests</h4>
           <p>
-            I am always happy and motivated to learn independently; one of my
+            I am <span>always happy and motivated to learn independently</span>; one of my
             main interests is languages, and having studied French and Spanish
             as my degree, I have also taught myself Italian, and dabbled with
             other languages too. I work daily to maintain and improve these
@@ -404,12 +409,13 @@
                 Project 1 (Solo) <span class="pink">Frogger</span>
               </h3>
               <p>
-                Using <span>DOM manipulation</span>, I built a grid-based browser version of
-                80s arcade game Frogger in <span>HTML, CSS and JavaScript</span> across 6
-                business days (8 in total). My main challenges included
-                animating the obstacles and detecting collisions with my player
-                character. My stretch goals included a high score display and
-                increasing the difficulty as the game progresses.
+                Using <span>DOM manipulation</span>, I built a grid-based
+                browser version of 80s arcade game Frogger in
+                <span>HTML, CSS and JavaScript</span> across 6 business days (8
+                in total). My main challenges included animating the obstacles
+                and detecting collisions with my player character. My stretch
+                goals included a high score display and increasing the
+                difficulty as the game progresses.
               </p>
               <div class="link-container">
                 <a
@@ -441,11 +447,12 @@
                 Project 2 (Pair) <span class="pink">Quiz App</span>
               </h3>
               <p>
-                With a partner, I produced a <span>React</span> quiz app with <span>TypeScript</span> over
-                a two-day hackathon. Our app consumed the Open Trivia public
-                API, used <span>React Router</span>, and was styled with the
-                <span>Bulma</span> CSS framework. We mostly pair-programmed, taking turns as
-                driver/navigator.
+                With a partner, I produced a <span>React</span> quiz app with
+                <span>TypeScript</span> over a two-day hackathon. Our app
+                consumed the Open Trivia public API, used
+                <span>React Router</span>, and was styled with the
+                <span>Bulma</span> CSS framework. We mostly pair-programmed,
+                taking turns as driver/navigator.
               </p>
               <div class="link-container">
                 <a
@@ -479,8 +486,9 @@
               </h3>
               <p>
                 Our group of three built a full-stack “bootcamp advice” app over
-                one week, using <span>MongoDB</span>, <span>Express</span>, <span>React/TypeScript</span> and <span>Node.js</span>.
-                My contributions to the project included providing the concept,
+                one week, using <span>MongoDB</span>, <span>Express</span>,
+                <span>React/TypeScript</span> and <span>Node.js</span>. My
+                contributions to the project included providing the concept,
                 implementing UI, writing some of the key logic for our CRUD
                 functionality and producing some of the form validation and
                 error handling.
@@ -521,11 +529,12 @@
               <p>
                 For my final project, I worked solo to build a full-stack
                 “community groups” app over 8 business days (12 in total). I
-                used a <span>Python</span> Flask API with <span>Flask</span> REST framework to serve my
-                data from a <span>Postgres</span> database. I built my frontend with
-                <span>React/TypeScript</span>. The project has CRUD functionality, with
-                various models and a mix of one-to-many and many-to-many
-                relationships.
+                used a <span>Python</span> Flask API with
+                <span>Flask</span> REST framework to serve my data from a
+                <span>Postgres</span> database. I built my frontend with
+                <span>React/TypeScript</span>. The project has CRUD
+                functionality, with various models and a mix of one-to-many and
+                many-to-many relationships.
               </p>
               <div class="link-container">
                 <a
