Copy and white space tweaks

--- a/index.html
+++ b/index.html
@@ -199,11 +199,12 @@
         <div class="about-copy">
           <h4>Previously...</h4>
           <p>
-            My name is Catherine and I am a <span>Junior Software Engineer</span> who has
-            accrued diverse experience in a variety of other roles, including
-            working for the picture desk of a national newspaper, in marketing
-            for a chain of restaurants, for myself as a freelance translator,
-            and more recently, in the voluntary sector as both an employee and a
+            My name is Catherine and I am a
+            <span>Junior Software Engineer</span> who has accrued diverse
+            experience in a variety of other roles, including working for the
+            picture desk of a national newspaper, in marketing for a chain of
+            restaurants, for myself as a freelance translator, and more
+            recently, in the voluntary sector as both an employee and a
             volunteer.
           </p>
           <h4>Why Software Engineering?</h4>
@@ -211,51 +212,49 @@
             Since the pandemic, WFH has meant sharing a workspace with a
             software engineer, and this has given me invaluable insight into the
             profession and its processes - stand-ups, sprints, retros etc. As
-            someone who is <span>
-              motivated by effective collaboration, high
-              performance, and continuous learning and improvement
-            </span>, my interest
-            was piqued. However, having thought of myself rather reductively as
-            "more of a humanities person" all my adult life, I didn't believe at
-            the time that a stem career could really be for me.
+            someone who is
+            <span>
+              motivated by effective collaboration, high performance, and
+              continuous learning and improvement </span
+            >, my interest was piqued. However, having thought of myself rather
+            reductively as "more of a humanities person" all my adult life, I
+            didn't believe at the time that a stem career could really be for
+            me.
           </p>
           <h4>My Journey So Far</h4>
           <p>
             A couple of years later and to meet the requirements of a job
             vacancy which asked for some experience of HTML and JavaScript, I
-            turned to <span>Codecademy</span> and found to my surprise that I very much
-            enjoyed it. Around the same time, some personality testing via my
-            university's careers service also suggested the field would be a
-            very good fit for me. All signs now seemed to point to software
-            engineering, and so I took the plunge and enrolled on <span>
-              General
-              Assembly's immersive bootcamp
-            </span>. It was fantastic to be back in a
-            learning environment and to be really challenged by something
-            totally new, and I am looking forward to starting out in the field,
-            knowing I will be expected to continue to learn and improve
-            throughout my career. I hope to secure a full-time position working
-            with super fun people who are super serious about what they do,
-            where I will be supported and encouraged to understand my new craft
-            inside out.
+            turned to <span>Codecademy</span> and found to my surprise that I
+            very much enjoyed it. Around the same time, some personality testing
+            via my university's careers service also suggested the field would
+            be a very good fit for me. All signs now seemed to point to software
+            engineering, and so I took the plunge and enrolled on
+            <span> General Assembly's immersive bootcamp </span>. It was
+            fantastic to be back in a learning environment and to be really
+            challenged by something totally new, and I am looking forward to
+            starting out in the field, knowing I will be expected to continue to
+            learn and improve throughout my career. I hope to secure a full-time
+            position working with super fun people who are super serious about
+            what they do, where I will be supported and encouraged to understand
+            my new craft inside out.
           </p>
           <h4>Why Me?</h4>
           <p>
             As a colleague, I think I'm good at asking the right questions and
             at looking ahead to forestall problems. Being a linguist, I'm a
-            <span>clear, adaptable communicator</span>. With a background in written
-            translation, I pride myself on (and often bore other people with) my
-            <span>attention to detail</span>.
+            <span>clear, adaptable communicator</span>. With a background in
+            written translation, I pride myself on (and often bore other people
+            with) my <span>attention to detail</span>.
           </p>
           <h4>My Programming Interests</h4>
           <p class="resources">
-            I am particularly interested in <span>backend development</span>, and I subscribe
-            to the
-            <cite>Talk Python to Me</cite> podcast. Having heard Eric Matthes on
-            the show, I have also begun his
+            I am particularly interested in <span>backend development</span>,
+            and I subscribe to the <cite>Talk Python to Me</cite> podcast.
+            Having heard Eric Matthes on the show, I have also begun his
             <cite>Python Crash Course</cite> book. I enjoy the
             <cite>JS Party</cite> and <cite>CoRecursive</cite> podcasts as well,
-            and particularly liked
+            and especially liked
             <a
               href="https://corecursive.com/hedy-with-felienne-hermans/"
               target="_blank"
@@ -266,25 +265,24 @@
             embracing the opportunity to practise what I've learned so far and
             to broaden/deepen my understanding of the discipline.
           </p>
-          <h4>(Some) Other Interests</h4>
+          <h4>(Some Of) My Other Interests</h4>
           <p>
-            I am <span>always happy and motivated to learn independently</span>; one of my
-            main interests is languages, and having studied French and Spanish
-            as my degree, I have also taught myself Italian, and dabbled with
-            other languages too. I work daily to maintain and improve these
-            skills using a variety of resources, from Duolingo (of course) to
-            podcasts, YouTube, conversation "exchanges" with learners of
-            English, and Netflix, to name a few. I also love to read in all my
-            languages, and am a member of my university's alumni book group.
+            One of my main interests is languages, and having studied French and
+            Spanish as my degree, I have also taught myself Italian, and dabbled
+            with other languages too; I am
+            <span>always happy and motivated to learn independently</span>. I
+            work daily to maintain and improve my skills using a variety of
+            resources, from Duolingo (of course) to podcasts, YouTube,
+            conversation "exchanges" with learners of English, and Netflix, to
+            name a few. I also love to read in all my languages, and am a member
+            of my university's alumni book group.
           </p>
         </div>
       </section>
       <section class="experience">
         <div>
           <h2 class="large-text centered">Experience</h2>
-          <p class="centered">
-            Some of the technologies I have experience with include:
-          </p>
+          <p class="centered">Technologies I have experience with include:</p>
         </div>
         <div class="skills">
           <h3 class="small-text centered">Frontend</h3>
@@ -417,7 +415,7 @@
                 goals included a high score display and increasing the
                 difficulty as the game progresses.
               </p>
-              <div class="link-container">
+              <div class="link-container-desktop">
                 <a
                   href="https://github.com/CatherineBrett/SEB-Project-1/blob/main/README.md"
                   target="_blank"
@@ -438,6 +436,19 @@
               />
               <img src="/assets/frogger-mobile.png" alt="Frogger screenshot" />
             </picture>
+            <div class="link-container">
+              <a
+                href="https://github.com/CatherineBrett/SEB-Project-1/blob/main/README.md"
+                target="_blank"
+                rel="noreferrer"
+                >README</a
+              ><a
+                href="https://catherinebrett.github.io/SEB-Project-1/"
+                target="_blank"
+                rel="noreferrer"
+                >Site</a
+              >
+            </div>
           </div>
         </article>
         <article class="project">
@@ -454,7 +465,7 @@
                 <span>Bulma</span> CSS framework. We mostly pair-programmed,
                 taking turns as driver/navigator.
               </p>
-              <div class="link-container">
+              <div class="link-container-desktop">
                 <a
                   href="https://github.com/CatherineBrett/SEB-Project-2/blob/main/README.md"
                   target="_blank"
@@ -475,6 +486,19 @@
               />
               <img src="/assets/quiz-mobile.png" alt="Quiz screenshot" />
             </picture>
+            <div class="link-container">
+              <a
+                href="https://github.com/CatherineBrett/SEB-Project-2/blob/main/README.md"
+                target="_blank"
+                rel="noreferrer"
+                >README</a
+              ><a
+                href="https://catherine-liv-project-2.netlify.app/"
+                target="_blank"
+                rel="noreferrer"
+                >Site</a
+              >
+            </div>
           </div>
         </article>
         <article class="project">
@@ -493,7 +517,7 @@
                 functionality and producing some of the form validation and
                 error handling.
               </p>
-              <div class="link-container">
+              <div class="link-container-desktop">
                 <a
                   href="https://github.com/CatherineBrett/project-3-backend/blob/main/README.md"
                   target="_blank"
@@ -517,6 +541,19 @@
                 alt="Bootcamp Buddy screenshot"
               />
             </picture>
+            <div class="link-container">
+              <a
+                href="https://github.com/CatherineBrett/project-3-backend/blob/main/README.md"
+                target="_blank"
+                rel="noreferrer"
+                >README</a
+              ><a
+                href="https://bootcamp-buddy.netlify.app/"
+                target="_blank"
+                rel="noreferrer"
+                >Site</a
+              >
+            </div>
           </div>
         </article>
         <article class="project">
@@ -536,7 +573,7 @@
                 functionality, with various models and a mix of one-to-many and
                 many-to-many relationships.
               </p>
-              <div class="link-container">
+              <div class="link-container-desktop">
                 <a
                   href="https://github.com/CatherineBrett/project-4-backend/blob/main/README.md"
                   target="_blank"
@@ -560,6 +597,19 @@
                 alt="Harborne Community Groups screenshot"
               />
             </picture>
+            <div class="link-container">
+              <a
+                href="https://github.com/CatherineBrett/project-4-backend/blob/main/README.md"
+                target="_blank"
+                rel="noreferrer"
+                >README</a
+              ><a
+                href="https://harbornecommunitygroups.netlify.app/"
+                target="_blank"
+                rel="noreferrer"
+                >Site</a
+              >
+            </div>
           </div>
         </article>
       </section>
