Adjusted white space, paragraph widths, text decoration thickness, mobile link container position

--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<!-- NOTES: 
-
--->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -269,8 +265,8 @@
           <p>
             One of my main interests is languages, and having studied French and
             Spanish as my degree, I have also taught myself Italian, and dabbled
-            with other languages too; I am
-            <span>always happy and motivated to learn independently</span>. I
+            with other languages too. I am
+            <span>always happy and motivated to learn independently</span>; I
             work daily to maintain and improve my skills using a variety of
             resources, from Duolingo (of course) to podcasts, YouTube,
             conversation "exchanges" with learners of English, and Netflix, to
