--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             someone who is
             <span>
               motivated by effective collaboration, high performance, and
-              continuous learning and improvement </span
+              continuous learning and improvement</span
             >, my interest was piqued. However, having thought of myself rather
             reductively as "more of a humanities person" all my adult life, I
             didn't believe at the time that a stem career could really be for
@@ -226,14 +226,14 @@
             via my university's careers service also suggested the field would
             be a very good fit for me. All signs now seemed to point to software
             engineering, and so I took the plunge and enrolled on
-            <span> General Assembly's immersive bootcamp </span>. It was
-            fantastic to be back in a learning environment and to be really
-            challenged by something totally new, and I am looking forward to
-            starting out in the field, knowing I will be expected to continue to
-            learn and improve throughout my career. I hope to secure a full-time
-            position working with super fun people who are super serious about
-            what they do, where I will be supported and encouraged to understand
-            my new craft inside out.
+            <span>General Assembly's immersive bootcamp</span>. It was fantastic
+            to be back in a learning environment and to be really challenged by
+            something totally new, and I am looking forward to starting out in
+            the field, knowing I will be expected to continue to learn and
+            improve throughout my career. I hope to secure a full-time position
+            working with super fun people who are super serious about what they
+            do, where I will be supported and encouraged to understand my new
+            craft inside out.
           </p>
           <h4>Why Me?</h4>
           <p>
@@ -246,20 +246,23 @@
           <h4>My Programming Interests</h4>
           <p class="resources">
             I am particularly interested in <span>backend development</span>,
-            and I subscribe to the <cite>Talk Python to Me</cite> podcast.
-            Having heard Eric Matthes on the show, I have also begun his
-            <cite>Python Crash Course</cite> book. I enjoy the
-            <cite>JS Party</cite> and <cite>CoRecursive</cite> podcasts as well,
-            and especially liked
+            and I subscribe to the <cite>Talk Python to Me</cite> podcast and
+            the <cite>Real Python</cite> newsletter. I also read the
+            <cite>TLDR</cite> newsletter, and enjoy the
+            <cite>JS Party</cite> and <cite>CoRecursive</cite> podcasts. (I
+            especially liked
             <a
               href="https://corecursive.com/hedy-with-felienne-hermans/"
               target="_blank"
               rel="noreferrer"
               >this episode</a
             >
-            of the latter. With the bootcamp successfully completed, I am
-            embracing the opportunity to practise what I've learned so far and
-            to broaden/deepen my understanding of the discipline.
+            of the latter.) With the bootcamp successfully completed, I am
+            embracing the opportunity to consolidate what I've learned so far
+            and to broaden/deepen my understanding of the discipline: at the
+            moment, I am working through two books —
+            <cite>Python Crash Course</cite> and
+            <cite>Eloquent JavaScript</cite>.
           </p>
           <h4>(Some Of) My Other Interests</h4>
           <p>
