--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             One of my main interests is languages, and having studied French and
             Spanish as my degree, I have also taught myself Italian, and dabbled
             with other languages too. I am
-            <span>always happy and motivated to learn independently</span>; I
+            <span>always happy and motivated to learn independently</span>: I
             work daily to maintain and improve my skills using a variety of
             resources, from Duolingo (of course) to podcasts, YouTube,
             conversation "exchanges" with learners of English, and Netflix, to
