--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
             to be back in a learning environment and to be really challenged by
             something totally new, and I am looking forward to starting out in
             the field, knowing I will be expected to continue to learn and
-            improve throughout my career. I hope to secure a full-time position
-            working with super fun people who are super serious about what they
-            do, where I will be supported and encouraged to understand my new
-            craft inside out.
+            improve throughout my career. I hope to secure a position working
+            with super fun people who are super serious about what they do,
+            where I will be supported and encouraged to understand my new craft
+            inside out.
           </p>
           <h4>Why Me?</h4>
           <p>
@@ -246,9 +246,8 @@
           <h4>My Programming Interests</h4>
           <p class="resources">
             I am particularly interested in <span>backend development</span>,
-            and I subscribe to the <cite>Talk Python to Me</cite> podcast and
-            the <cite>Real Python</cite> newsletter. I also read the
-            <cite>TLDR</cite> newsletter, and enjoy the
+            and I subscribe to the <cite>Talk Python to Me</cite> podcast. I
+            also read the <cite>TLDR</cite> newsletter, and enjoy the
             <cite>JS Party</cite> and <cite>CoRecursive</cite> podcasts. (I
             especially liked
             <a
@@ -260,21 +259,20 @@
             of the latter.) With the bootcamp successfully completed, I am
             embracing the opportunity to consolidate what I've learned so far
             and to broaden/deepen my understanding of the discipline: at the
-            moment, I am working through two books —
-            <cite>Python Crash Course</cite> and
-            <cite>Eloquent JavaScript</cite>.
+            moment, I am working through Eric Matthes'
+            <cite>Python Crash Course</cite> as well as <cite>CS50x</cite>,
+            Harvard's introduction to Computer Science.
           </p>
           <h4>(Some Of) My Other Interests</h4>
           <p>
             One of my main interests is languages, and having studied French and
-            Spanish as my degree, I have also taught myself Italian, and dabbled
-            with other languages too. I am
+            Spanish as my degree, I am also teaching myself Italian. I am
             <span>always happy and motivated to learn independently</span>: I
-            work daily to maintain and improve my skills using a variety of
-            resources, from Duolingo (of course) to podcasts, YouTube,
-            conversation "exchanges" with learners of English, and Netflix, to
-            name a few. I also love to read in all my languages, and am a member
-            of my university's alumni book group.
+            work daily to maintain and improve my languages using a variety of
+            resources, from Duolingo (of course) to podcasts, YouTube, Netflix,
+            fiction, and conversation "exchanges" with learners of English, to
+            name a few. I dabble too with Ukrainian, Polish and Welsh. I also
+            love to read, and am a member of my university's alumni book group.
           </p>
         </div>
       </section>
