More copy edits

--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
             embracing the opportunity to consolidate what I've learned so far
             and to broaden/deepen my understanding of the discipline: at the
             moment, I am working through Eric Matthes'
-            <cite>Python Crash Course</cite> as well as <cite>CS50x</cite>,
-            Harvard's introduction to Computer Science.
+            <cite>Python Crash Course</cite> as well as Harvard's introduction
+            to Computer Science, <cite>CS50x</cite>.
           </p>
           <h4>(Some Of) My Other Interests</h4>
           <p>
@@ -271,7 +271,7 @@
             work daily to maintain and improve my languages using a variety of
             resources, from Duolingo (of course) to podcasts, YouTube, Netflix,
             fiction, and conversation "exchanges" with learners of English, to
-            name a few. I dabble too with Ukrainian, Polish and Welsh. I also
+            name a few. I dabble with Ukrainian, Polish and Welsh, too! I also
             love to read, and am a member of my university's alumni book group.
           </p>
         </div>
