More copy edits plus small layout change to About Me section

--- a/index.html
+++ b/index.html
@@ -269,10 +269,13 @@
             Spanish as my degree, I am also teaching myself Italian. I am
             <span>always happy and motivated to learn independently</span>: I
             work daily to maintain and improve my languages using a variety of
-            resources, from Duolingo (of course) to podcasts, YouTube, Netflix,
-            fiction, and conversation "exchanges" with learners of English, to
-            name a few. I dabble with Ukrainian, Polish and Welsh, too! I also
-            love to read, and am a member of my university's alumni book group.
+            resources, from Duolingo to podcasts, from YouTube to fiction*, and
+            from Netflix to conversation "exchanges" with learners of English. I
+            dabble with Ukrainian, Polish and Welsh, too!
+          </p>
+          <p>
+            *I also love to read more generally, and am a member of my
+            university's alumni book group.
           </p>
         </div>
       </section>
