--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@
             Spanish as my degree, I am also teaching myself Italian. I am
             <span>always happy and motivated to learn independently</span>: I
             work daily to maintain and improve my languages using a variety of
-            resources, from Duolingo to podcasts, from YouTube to fiction, and
-            from Netflix to conversation "exchanges" with learners of English. I
-            dabble with Ukrainian, Polish and Welsh, too! I also love to read,
-            and am a member of my university's alumni book group.
+            resources from Duolingo to podcasts, YouTube to fiction, and Netflix
+            to video calls with learners of English. I dabble with Ukrainian,
+            Polish and Welsh, too! I also love to read, and am a member of my
+            university's alumni book group.
           </p>
         </div>
       </section>
