--- a/index.html
+++ b/index.html
@@ -266,13 +266,14 @@
           <h4>(Some Of) My Other Interests</h4>
           <p>
             One of my main interests is languages, and having studied French and
-            Spanish as my degree, I am also teaching myself Italian. I am
-            <span>always happy and motivated to learn independently</span>: I
-            work daily to maintain and improve my languages using a variety of
-            resources from Duolingo to podcasts, YouTube to fiction, and Netflix
-            to video calls with learners of English. I dabble with Ukrainian,
-            Polish and Welsh, too! I also love to read, and am a member of my
-            university's alumni book group.
+            Spanish as my degree, I am also teaching myself Italian. I work
+            daily to maintain and improve my languages using a variety of
+            resources from Duolingo to podcasts, from YouTube to fiction, and
+            from Netflix to video calls with learners of English. I am
+            <span>always happy and motivated to learn independently</span>. As a
+            Duolingo fanatic, I am currently dabbling with Ukrainian, Polish and
+            Welsh, too! I also love to read, and am a member of my university's
+            alumni book group.
           </p>
         </div>
       </section>
